# omelet-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: code-reviewer.md  debugger.md  test-writer.md
.claude/commands/: add-command.md  build.md  install.md  lint.md  test.md
.claude/skills/click-cli/: SKILL.md
.claude/skills/gcs-upload/: SKILL.md
.claude/skills/markdown-processing/: SKILL.md
omelet/: __init__.py  ai_check.py  cli.py  config.py  gcloud_auth.py  gcs_uploader.py  gemini_image.py  ghost_client.py  image_metadata.py  image_uploader.py  markdown_processor.py  openai_image.py
